# nn-project

./: .gitignore  DataAnalysis.py  README.md  Train_Val_split.py  compare_all_models.py  evaluate_FGSM_cnn_model.py  evaluate_FGSM_model.py  evaluate_best_cnn_model.py  evaluate_best_model.py  evaluate_noise_cnn_model.py  evaluate_noise_model.py  evaluate_temperature_scaling.py  evaluate_temperature_scaling_cnn.py  evaluate_temperature_scaling_robust.py  main.py  main_cnn.py  main_mlp.py  pyproject.toml
outputs/comparison/: main_comparison_table.csv  temperature_scaling_clean.csv  temperature_scaling_shifted.csv
outputs/models/: best_cnn_mnist_epoch4.pt  best_cnn_mnist_epoch5.pt  best_mlp_mnist_epoch5.pt
outputs/splits/no_transformation/: train_indices.pt
outputs/splits/normalization/: val_indices.pt
