[project]
name = "reliable-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "torch",
    "torchvision",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
